syntax = "proto3";

package v2ray.core.proxy.mtproto;
option csharp_namespace = "V2Ray.Core.Proxy.Mtproto";
option go_package = "v2ray.com/core/proxy/mtproto";
option java_package = "com.v2ray.core.proxy.mtproto";
option java_multiple_files = true;

import "common/protocol/user.proto";

message Account {
  bytes secret = 1;
}

message ServerConfig {
  // User is a list of users that allowed to connect to this inbound.
  // Although this is a repeated field, only the first user is effective for
  // now.
  repeated v2ray.core.common.protocol.User user = 1;
}

message ClientConfig {}
